fix supporters block on dark mode

--- a/docs/assets/css/extra.css
+++ b/docs/assets/css/extra.css
@@ -38,3 +38,9 @@
 .phalcon-blog__sponsors-items a:hover {
     border-bottom-color: #273646;
 }
+
+[data-md-color-scheme="state"] {
+    .phalcon-blog__sponsors-items a {
+        background-color: #ffffffb3;
+    }
+}
